--- a/webmcast/static/css/layout.css
+++ b/webmcast/static/css/layout.css
@@ -5,3 +5,11 @@ html {
 body {
     min-height: 100%;
 }
+
+body[error="409"] {
+    background: #1a1a1a;
+}
+
+.wmc-text-shadow {
+    text-shadow: 0 1px 3px rgba(0,0,0,.5);
+}
