Remove more code.

--- a/webmcast/templates/room.html
+++ b/webmcast/templates/room.html
@@ -6,9 +6,9 @@
         <link rel="stylesheet" href="/static/css/uikit.min.css" />
         <link rel="stylesheet" href="/static/css/everything.css" />
     </head>
-    <body style="height: 100%" class="uk-flex" data-stream-id="{{ stream_id }}">
-        <section class="w-view-container" style="flex: 3">
-            <video class="view uk-responsive-width"></video>
+    <body style="height: 100%" class="uk-flex" data-stream-id="{{ id }}">
+        <section class="w-view-container" style="flex: 3; height: 100%">
+            <video class="view uk-responsive-width uk-responsive-height"></video>
         </section>
 
         <section class="w-chat-container uk-flex uk-flex-column" style="flex: 1">
