--- a/webmcast/templates/room.html
+++ b/webmcast/templates/room.html
@@ -9,11 +9,25 @@
     <body data-stream-id="{{ id }}">
         <section class="w-chat-container uk-block uk-block-secondary uk-contrast">
             <ul class="log uk-list">
+                <li class="empty-log">
+                    <span class="text uk-text-muted">Nothing here.</span>
+                </li>
                 <li class="message">
                     <span class="name"></span>
                     <span class="text"></span>
                 </li>
             </ul>
+            <div class="offline-message uk-text-muted">
+                The stream is offline.
+            </div>
+            <form class="login-form uk-form">
+                <fieldset>
+                    <input class="input" placeholder="What's your name?" />
+                </fieldset>
+                <fieldset>
+                    <button class="uk-button uk-button-primary" type="submit">Join</button>
+                </fieldset>
+            </form>
             <form class="input-form uk-form">
                 <fieldset>
                     <textarea class="input" cols="1" rows="2" placeholder="Write a message"></textarea>
@@ -24,9 +38,7 @@
             </form>
         </section>
 
-        <section class="w-content-container uk-block">
-            <h1><span class="uk-text-muted">///</span> {{ id }}</h1>
-
+        <section class="w-content-container uk-block" style="max-width: {{w}}px">
             <section class="w-view-wrap w-icon-overlay w-icon-loading">
                 {# `video` with `height: auto` will always use the default aspect ratio.
                    so instead we enforce the size of this element with an empty image. #}
@@ -34,6 +46,7 @@
   HTML sucks  #}<video class="w-view uk-responsive-width"></video>
                 {# TODO controls #}
             </section>
+            <h1>{{ id }}</h1>
         </section>
 
         <script src="/static/js/room.js"></script>
