--- a/webmcast/templates/room.html
+++ b/webmcast/templates/room.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>...</title>
+        <title>webmcast -- {{id}}</title>
         <link rel="stylesheet" href="/static/css/uikit.min.css" />
         <link rel="stylesheet" href="/static/css/everything.css" />
     </head>
@@ -33,20 +33,23 @@
                     <textarea class="input" cols="1" rows="2" placeholder="Write a message"></textarea>
                 </fieldset>
                 <fieldset>
+                    <button class="uk-button uk-button-link uk-icon-smile-o uk-icon-small uk-icon-hover"></button>
                     <button class="uk-button uk-button-primary" type="submit">Send</button>
                 </fieldset>
             </form>
         </section>
 
-        <section class="w-content-container uk-block" style="max-width: {{w}}px">
-            <section class="w-view-wrap w-icon-overlay w-icon-loading">
-                {# `video` with `height: auto` will always use the default aspect ratio.
-                   so instead we enforce the size of this element with an empty image. #}
-                <svg width="{{w}}" height="{{h}}" class="w-view-pad uk-responsive-width"></svg>{#
-  HTML sucks  #}<video class="w-view uk-responsive-width"></video>
-                {# TODO controls #}
+        <section class="w-content-container uk-block">
+            <section style="max-width: {{w}}px; margin: 0 auto">
+                <section class="w-view-wrap w-icon-overlay w-icon-loading">
+                    {# `video` with `height: auto` will always use the default aspect ratio.
+                       so instead we enforce the size of this element with an empty image. #}
+                    <svg width="{{w}}" height="{{h}}" class="w-view-pad uk-responsive-width"></svg>{#
+      HTML sucks  #}<video class="w-view uk-responsive-width"></video>
+                    {# TODO controls #}
+                </section>
+                <h1>{{ id }}</h1>
             </section>
-            <h1>{{ id }}</h1>
         </section>
 
         <script src="/static/js/room.js"></script>
