Add <meta name="viewport"> to templates.

--- a/templates/error.html
+++ b/templates/error.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>webmcast -- oh no</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/static/css/uikit.min.css" />
         <link rel="stylesheet" href="/static/css/everything.css" />
+        <title>webmcast -- oh no</title>
     </head>
     <body data-error="{{.Code}}">
         <section class="w-content-container uk-block uk-block-secondary uk-contrast uk-flex uk-flex-column">
