--- a/templates/room.html
+++ b/templates/room.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>webmcast -- {{.ID}}</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/static/css/uikit.min.css" />
         <link rel="stylesheet" href="/static/css/everything.css" />
+        <title>webmcast -- {{.ID}}</title>
     </head>
     <body data-stream-id="{{.ID}}">
         <section class="w-chat-container uk-block uk-block-secondary uk-contrast">
