Use <div>s instead of <section>s.
I have no idea what all these tags mean.

--- a/templates/error.html
+++ b/templates/error.html
@@ -8,7 +8,7 @@
         <title>webmcast -- oh no</title>
     </head>
     <body data-error="{{.Code}}">
-        <section class="w-content-container uk-block uk-block-secondary uk-contrast uk-flex uk-flex-column">
+        <div class="w-content-container uk-block uk-block-secondary uk-contrast uk-flex uk-flex-column">
             <div class="uk-flex-item-1 uk-flex uk-flex-column uk-flex-center uk-text-center">
                 <h2 style="font-weight: bold">NO SIGNAL // {{.Code}} //
                     {{.DisplayMessage}}
@@ -17,6 +17,6 @@
             <h3>
                 * {{printf "%s" .DisplayComment}}
             </h3>
-        </section>
+        </div>
     </body>
 </html>
