--- a/templates/room.html
+++ b/templates/room.html
@@ -41,12 +41,15 @@
         </div>
 
         <div class="w-content-container uk-block uk-flex uk-flex-column">
-            <div class="uk-flex-item-1">
+            <div>
                 <div class="w-view-container w-icon-overlay w-icon-warning">
+                    {{if .Stream.HasVideo -}}
                     {{/* `video` with `height: auto` will always use the default aspect ratio.
-                         so instead we enforce the size of this element with an empty image. */}}
+                         so instead we enforce the size of this element with an empty image. */ -}}
                     <svg width="{{.Stream.Width}}" height="{{.Stream.Height}}" class="pad uk-responsive-width">
-                    </svg><video class="uk-responsive-width"></video>
+                    </svg>
+                    {{- end -}}
+                    <video class="uk-responsive-width"></video>
                     <div class="controls">{{/* TODO */}}</div>
                 </div>
             </div>
