--- a/templates/error.html
+++ b/templates/error.html
@@ -8,15 +8,15 @@
         <title>webmcast -- oh no</title>
     </head>
     <body data-error="{{.Code}}">
-        <div class="w-content-container uk-block uk-block-secondary uk-contrast uk-flex uk-flex-column">
-            <div class="uk-flex-item-1 uk-flex uk-flex-column uk-flex-center uk-text-center">
-                <h2 style="font-weight: bold">NO SIGNAL // {{.Code}} //
-                    {{.DisplayMessage}}
-                </h2>
+        <div class="w-content-container uk-block uk-block-secondary uk-contrast uk-flex">
+            <div class="uk-container uk-container-center uk-flex uk-flex-column uk-flex-item-1">
+                <div class="uk-flex-item-1 uk-flex uk-flex-column uk-flex-center uk-text-center">
+                    <h2 style="font-weight: bold">NO SIGNAL // {{.Code}} //
+                        {{.DisplayMessage}}
+                    </h2>
+                </div>
+                <h3>* {{.DisplayComment}}</h3>
             </div>
-            <h3>
-                * {{printf "%s" .DisplayComment}}
-            </h3>
         </div>
     </body>
 </html>
