--- a/templates/room.html
+++ b/templates/room.html
@@ -40,8 +40,8 @@
             </form>
         </div>
 
-        <div class="w-content-container uk-block uk-flex uk-flex-column">
-            <div>
+        <div class="w-content-container uk-block">
+            <div class="uk-container uk-container-center">
                 <div class="w-view-container {{if .Stream.HasVideo}}has-video{{end}}" data-status="error">
                     <div class="w-overlay icon"></div>
                     {{/* `video` with `height: auto` will always use the default aspect ratio.
@@ -59,11 +59,19 @@
                     <video class="uk-responsive-width"></video>
                     <div class="controls uk-flex">
                         <div class="status uk-flex-item-1">not connected</div>
-                        <div class="volume">TODO volume controls</div>
+                        <div class="volume"><i class="uk-icon-volume-up"></i></div>
                     </div>
                 </div>
+
+                <div class="w-view-info uk-flex">
+                    <h1 class="id">{{.ID}}</h1>
+                    <h3 class="created">
+                        <span class="uk-text-muted">created on</span>
+                        {{.Stream.Created.Format "02.01.2006, 15:04:05 MST"}}
+                    </h3>
+                    <h3 class="viewers"><i class="uk-icon-eye uk-text-muted"></i> {{.Stream.Viewers}}</h3>
+                </div>
             </div>
-            <h1>{{.ID}}</h1>
         </div>
 
         <script src="/static/js/room.js"></script>
