--- a/static/css/everything.css
+++ b/static/css/everything.css
@@ -30,7 +30,7 @@ body[data-error], body[data-error] h1, body[data-error] h2, body[data-error] h3 
     display: inline-block;
 }
 
-[data-status="playing"] .pad, [data-status="playing"] .icon, [data-status]:not([data-status="playing"]) .pad + * {
+[data-status="playing"] .pad, [data-status]:not([data-status="playing"]) .pad + * {
     display: none;
 }
 
@@ -50,6 +50,14 @@ body[data-error], body[data-error] h1, body[data-error] h2, body[data-error] h3 
     pointer-events: none;
 }
 
+[data-status="playing"] .icon:before {
+    content: ' ';
+}
+
+[data-status="playing"]:not(.has-video) .icon:before {
+    content: '\f028';
+}
+
 [data-status="loading"] .icon:before {
     content: ' ';
 	border: 0.2em solid transparent;
@@ -57,6 +65,13 @@ body[data-error], body[data-error] h1, body[data-error] h2, body[data-error] h3 
 	border-left-color: #fff;
 	border-right-color: #fff;
 	animation: uk-rotate 1.5s infinite linear;
+}
+
+.w-responsive {
+    max-width: 100%;
+    max-height: 80vh;
+    width: auto;
+    height: auto;
 }
 
 .w-view-container .controls {
