--- a/templates/error.html
+++ b/templates/error.html
@@ -8,7 +8,7 @@
         <title>webmcast -- oh no</title>
     </head>
     <body data-error="{{.Code}}">
-        <div class="w-content-container uk-block uk-block-secondary uk-contrast uk-flex">
+        <div class="content-container uk-block uk-block-secondary uk-contrast uk-flex">
             <div class="uk-container uk-container-center uk-flex uk-flex-column uk-flex-item-1">
                 <div class="uk-flex-item-1 uk-flex uk-flex-column uk-flex-center uk-text-center">
                     <h2 style="font-weight: bold">NO SIGNAL // {{.Code}} //
